tests/baselines/reference/FunctionPropertyAssignments6_es6.errors.txt
tests/cases/conformance/es6/functionPropertyAssignments/FunctionPropertyAssignments6_es6.ts(1,12): error TS1003: Identifier expected.


==== tests/cases/conformance/es6/functionPropertyAssignments/FunctionPropertyAssignments6_es6.ts (1 errors) ====
    var v = { *<T>() { } }
               ~
!!! error TS1003: Identifier expected.